--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ site_author: Python CDMX Community
 site_url: https://python-cdmx.github.io
 
 # Repository
-repo_name: python-cdmx/python-cdmx-charlas
-repo_url: https://github.com/python-cdmx/python-cdmx-charlas
+repo_name: pythonCDMX
+repo_url: https://github.com/PythonMexico/pythonCDMX
 edit_uri: edit/main/docs/
 
 # Copyright
