feat: Restructuración completa de sección Participa con sistema modular
- Creada nueva sección Participa con tabs para mejor organización
- Modularizado contenido en archivos separados (ponentes-info.md, ponentes-destacados.md, etc.)
- Agregada Mónica Ortega como nueva voluntaria destacada
- Implementado sistema de tabs con JavaScript personalizado
- Estandarizado formato de tarjetas para voluntarios y ponentes
- Movidas listas fuera de Reconocimientos a sus propias secciones
- Mejorada navegación y consistencia visual
- Actualizado CHANGELOG.md con todos los cambios

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,10 +84,11 @@ nav:
     - 2025: meetups/2025/
     - 2024: meetups/2024/
     - 2023: meetups/2023/
-  - Comunidad:
+  - Participa:
     - Cómo Contribuir: comunidad/como-contribuir.md
-    - Ponentes: comunidad/ponentes
     - Voluntarios: comunidad/voluntarios.md
+    - Ponentes: comunidad/ponentes.md
+  - Comunidad:
     - Alianzas: comunidad/alianzas.md
     - Reconocimientos: comunidad/reconocimientos.md
   #- Temas y Tecnologías: tags.md
@@ -123,6 +124,9 @@ extra:
 # SEO
 extra_css:
   - css/custom.css
+
+extra_javascript:
+  - js/custom.js
 
 # Markdown extensions
 markdown_extensions:
