Nuevo diseño y automatización de eventos de meetups (2023-2025) (#9)
* feat: Restructuración completa de sección Participa con sistema modular

- Creada nueva sección Participa con tabs para mejor organización
- Modularizado contenido en archivos separados (ponentes-info.md, ponentes-destacados.md, etc.)
- Agregada Mónica Ortega como nueva voluntaria destacada
- Implementado sistema de tabs con JavaScript personalizado
- Estandarizado formato de tarjetas para voluntarios y ponentes
- Movidas listas fuera de Reconocimientos a sus propias secciones
- Mejorada navegación y consistencia visual
- Actualizado CHANGELOG.md con todos los cambios

* fix: template de meetup de charla única ahora es idéntico al ejemplo manual, sin frontmatter, rutas absolutas y bloques fieles al diseño

* fix: template de meetup de múltiples charlas ahora usa rutas absolutas, bloques y estructura idénticos al de charla única y ejemplo manual

* fix: el script generate_meetups.py ahora usa el campo textual event_month_year del JSON para mostrar el mes en texto (ej. Julio 2025)

* feat: actualización masiva de eventos de meetups (2023, 2024, 2025) con nuevo diseño, estructura y enlaces de comunidad

* feat: actualización de estilos en custom.css para nuevo diseño visual de meetups y secciones

* chore: elimina archivos de depuración y contenido redundante (ponentes, voluntarios, reconocimientos, test)

* add: Logo Python Mexico

* docs: actualiza CHANGELOG con rediseño de meetups, templates, limpieza y mejoras de automatización

---------

Co-authored-by: pixelead0 <info@pixelead0.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,16 +81,15 @@ nav:
   - Inicio: index.md
   - Meetups:
     - General: meetups/index.md
-    - 2025: meetups/2025/
-    - 2024: meetups/2024/
-    - 2023: meetups/2023/
-  - Comunidad:
+    - 2025: meetups/2025/index.md
+    - 2024: meetups/2024/index.md
+    - 2023: meetups/2023/index.md
+  - Participa:
     - Cómo Contribuir: comunidad/como-contribuir.md
-    - Ponentes: comunidad/ponentes
     - Voluntarios: comunidad/voluntarios.md
+    - Ponentes: comunidad/ponentes.md
+  - Comunidad:
     - Alianzas: comunidad/alianzas.md
-    - Reconocimientos: comunidad/reconocimientos.md
-  #- Temas y Tecnologías: tags.md
   - Acerca de: about.md
 
 # Plugins
@@ -123,6 +122,9 @@ extra:
 # SEO
 extra_css:
   - css/custom.css
+
+extra_javascript:
+  - js/custom.js
 
 # Markdown extensions
 markdown_extensions:
