refactor: remove all inline styles from markdown files
- Remove inline style attributes from all HTML elements in docs/
- Clean up 25 files with inline styles
- Preserve semantic structure and CSS classes
- Improve maintainability and separation of concerns
- Files affected: about.md, tags.md, components/, meetups/, comunidad/

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,16 +20,16 @@ theme:
   # Custom colors based on logo
   palette:
     # Light mode
-    - scheme: default
-      primary: green
-      accent: red
+    - scheme: material
+      # primary: green
+      #accent: red
       toggle:
         icon: material/brightness-auto
         name: Switch to dark mode
     # Dark mode
     - scheme: slate
-      primary: green
-      accent: red
+      #primary: green
+      #accent: red
       toggle:
         icon: material/brightness-7
         name: Switch to light mode
