Se crean estilos para la pagina principal.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,13 +21,17 @@ theme:
   palette:
     # Light mode
     - scheme: default
+      primary: green
+      accent: green
       toggle:
-        icon: material/brightness-auto
+        icon: material/brightness-7
         name: Cambiar a modo oscuro
     # Dark mode
     - scheme: slate
+      primary: green
+      accent: green
       toggle:
-        icon: material/brightness-7
+        icon: material/brightness-4
         name: Cambiar a modo claro
 
   # Features - configuración optimizada
