Feat/new style (#12)
Rediseño completo del sistema de estilos y reorganización de la documentación del proyecto Python CDMX. Se implementa una **arquitectura variables-first** con 18+ variables CSS centralizadas y se crea una guía completa de sistema de diseño como fuente única de verdad.
---------

Co-authored-by: pixelead0 <info@pixelead0.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
 site_name: Python CDMX
 site_description: Comunidad de desarrolladores Python en la Ciudad de México
-site_author: Python CDMX Community
-site_url: https://python-cdmx.github.io
+site_author: Comunidad Python CDMX
+site_url: https://pythoncdmx.org
 
 # Repository
-repo_name: pythonCDMX
+repo_name: PythonMexico/pythonCDMX
 repo_url: https://github.com/PythonMexico/pythonCDMX/
 #edit_uri: edit/main/docs/
 
@@ -22,26 +22,21 @@ theme:
     # Light mode
     - scheme: default
       primary: green
-      accent: red
+      accent: green
       toggle:
-        icon: material/brightness-auto
-        name: Switch to dark mode
+        icon: material/brightness-7
+        name: Cambiar a modo oscuro
     # Dark mode
     - scheme: slate
       primary: green
-      accent: red
+      accent: green
       toggle:
-        icon: material/brightness-7
-        name: Switch to light mode
+        icon: material/brightness-4
+        name: Cambiar a modo claro
 
-  # Custom CSS
-  custom_dir: docs/css/
-
-  # Features
+  # Features - configuración optimizada
   features:
     - announce.dismiss
-    #- content.action.edit
-    #- content.action.view
     - content.code.annotate
     - content.code.copy
     - content.code.select
@@ -54,11 +49,6 @@ theme:
     - navigation.instant
     - navigation.instant.prefetch
     - navigation.instant.progress
-    - navigation.instant.result
-    - navigation.instant.suggest
-    - navigation.instant.tracking
-    - navigation.instant.worker
-    - navigation.managing
     - navigation.prune
     - navigation.sections
     - navigation.tabs
@@ -70,11 +60,9 @@ theme:
     - search.suggest
     - toc.follow
 
-  # FontAwesome configuration
+  # Icons
   icon:
     repo: fontawesome/brands/github
-    edit: fontawesome/solid/pen-to-square
-    view: fontawesome/solid/eye
 
 # Navigation
 nav:
@@ -94,32 +82,47 @@ nav:
 
 # Plugins
 plugins:
-  - search
+  - search:
+      lang: es
   - git-revision-date-localized:
       enable_creation_date: true
+      type: date
+      timezone: America/Mexico_City
+      locale: es
   - minify:
       minify_html: true
-  - tags
+      minify_css: true
+      minify_js: true
+      htmlmin_opts:
+        remove_comments: true
 
 # Social links
 extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/PythonMexico/pythonCDMX
+      name: GitHub
     - icon: fontawesome/brands/telegram
       link: https://t.me/PythonCDMX
-    - icon: fontawesome/brands/twitter
+      name: Telegram
+    - icon: fontawesome/brands/x-twitter
       link: https://twitter.com/PythonMexico
+      name: Twitter/X
     - icon: fontawesome/brands/youtube
       link: https://www.youtube.com/@PythonMexico
+      name: YouTube
     - icon: fontawesome/brands/meetup
       link: https://www.meetup.com/python-mexico
+      name: Meetup
     - icon: fontawesome/brands/instagram
       link: https://www.instagram.com/pythoncdmx/
+      name: Instagram
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/groups/13126454/
+      name: LinkedIn
 
-# SEO
+
+# Custom CSS and JavaScript
 extra_css:
   - css/custom.css
 
@@ -136,6 +139,7 @@ markdown_extensions:
   - md_in_html
   - toc:
       permalink: true
+      title: En esta página
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.betterem:
@@ -149,12 +153,18 @@ markdown_extensions:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
+      use_pygments: true
   - pymdownx.inlinehilite
   - pymdownx.keys
-  - pymdownx.magiclink
+  - pymdownx.magiclink:
+      normalize_issue_symbols: true
+      repo_url_shorthand: true
+      user: PythonMexico
+      repo: pythonCDMX
   - pymdownx.mark
   - pymdownx.smartsymbols
   - pymdownx.snippets:
+      base_path: 'docs'
       check_paths: true
   - pymdownx.superfences:
       custom_fences:
@@ -175,4 +185,6 @@ markdown_extensions:
 validation:
   nav:
     omitted_files: ignore
-  not_found: warn
+    not_found: warn
+  links:
+    not_found: warn
