Add new "Sedes" section and update community links in documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,8 +76,9 @@ nav:
     - Cómo Contribuir: comunidad/como-contribuir.md
     - Voluntarios: comunidad/voluntarios.md
     - Ponentes: comunidad/ponentes.md
+    - Sedes: comunidad/sedes.md
   - Comunidad:
-    - Alianzas: comunidad/alianzas.md
+    - Comunidades: comunidad/comunidades.md
   - Acerca de: about.md
 
 # Plugins
