--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build MkDocs site
-        run: mkdocs build --strict
+        run: mkdocs build --strict --use-directory-urls
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
