Agregar sección de blog y artículo sobre PyCon Latam 2025
* Se añadió una nueva sección "Blog" en la navegación de mkdocs.yml.
* Se creó el archivo de índice del blog con una introducción y enlaces a artículos recientes.
* Se agregó un artículo detallado sobre la PyCon Latam 2025, incluyendo crónicas, videos y reflexiones sobre el evento.
* Se incorporaron imágenes relacionadas con el evento en la carpeta media.
* Se actualizó requirements.txt para incluir el plugin mkdocs-awesome-pages-plugin.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,9 @@ nav:
     - Comunidades: comunidad/comunidades.md
     - Código de Conducta: codigo-de-conducta.md
     - Aviso de Privacidad: aviso-de-privacidad.md
+  - Blog:
+    - Inicio: blog/index.md
+    - PyCon Latam 2025: blog/PyconLatam2025.md
   - Acerca de: about.md
 
 # Plugins
@@ -98,6 +101,10 @@ plugins:
       minify_js: true
       htmlmin_opts:
         remove_comments: true
+  - awesome-pages:
+      filename: .pages
+      collapse_single_pages: false
+      strict: false
 
 # Social links
 extra:
