--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ mkdocs>=1.5.0
 mkdocs-material>=9.5.0
 mkdocs-git-revision-date-localized-plugin>=1.2.0
 mkdocs-minify-plugin>=0.7.0
-mkdocs-awesome-pages-plugin>=2.10.1
+mkdocs-awesome-nav>=3.0.0
 pymdown-extensions>=10.0.0
 Jinja2>=3.0
+requests>=2.25.0
