--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,28 +64,6 @@ theme:
   icon:
     repo: fontawesome/brands/github
 
-# Navigation
-nav:
-  - Inicio: index.md
-  - Meetups:
-    - General: meetups/index.md
-    - 2025: meetups/2025/index.md
-    - 2024: meetups/2024/index.md
-    - 2023: meetups/2023/index.md
-  - Participa:
-    - Cómo Contribuir: comunidad/como-contribuir.md
-    - Voluntarios: comunidad/voluntarios.md
-    - Ponentes: comunidad/ponentes.md
-    - Sedes: comunidad/sedes.md
-  - Comunidad:
-    - Comunidades: comunidad/comunidades.md
-    - Código de Conducta: codigo-de-conducta.md
-    - Aviso de Privacidad: aviso-de-privacidad.md
-  - Blog:
-    - Inicio: blog/index.md
-    - PyCon Latam 2025: blog/PyconLatam2025.md
-  - Acerca de: about.md
-
 # Plugins
 plugins:
   - search:
@@ -101,10 +79,7 @@ plugins:
       minify_js: true
       htmlmin_opts:
         remove_comments: true
-  - awesome-pages:
-      filename: .pages
-      collapse_single_pages: false
-      strict: false
+  - awesome-nav
 
 # Social links
 extra:
