--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -95,4 +95,4 @@ jobs:
 
       - name: Stop Staging Site
         run: |
-          aws s3 rm s3://${{ secrets.AWS_S3_BUCKET }}/staging/ --recursive
+          aws s3 rm s3://${{ secrets.AWS_S3_BUCKET }}/ --recursive
