fix(config): agregar use_directory_urls para manejar URLs sin extensión
- Configurar use_directory_urls: true en mkdocs.yml
- Permite que URLs como /meetups/ funcionen correctamente
- Mantiene compatibilidad con estructura de directorios de MkDocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,9 @@ repo_url: https://github.com/PythonMexico/pythonCDMX/
 # Copyright
 copyright: Copyright &copy; 2025 Python CDMX
 
+# URL configuration
+use_directory_urls: true
+
 # Theme configuration
 theme:
   name: material
